审核流程的前台页面完成

--- a/phpcms/templates/top100/api/activity.html
+++ b/phpcms/templates/top100/api/activity.html
@@ -1,7 +1,6 @@
 
 {template "content", "header"}
-
-<script type="text/javascript">
+<script type="application/javascript">
 <?php if ($_GET['pages']) {
 ?>
 	var page = {$_GET['pages']};
