--- a/phpcms/templates/top100/api/caseSubmit.html
+++ b/phpcms/templates/top100/api/caseSubmit.html
@@ -143,17 +143,18 @@
 <form class="caseform-m" action="" method="post" enctype="multipart/form-data">
 <div class="c caseform _pc">
 	<table cellpadding="0" cellspacing="0">
-		<tr>
-			<td class="td1">案例提案名称：</td>
+		<tr >
+			<td   class="td1">案例提案名称：</td>
 			<td><input id="case_name" /></td>
 		</tr>
 		<tr>
 			<td class="td1">分享者姓名：</td>
 			<td><input id="share_name"/></td>
+
 		</tr>
 		<tr>
-			<td class="td1">分享者介绍：</td>
-			<td><input id="share_intruduction"/></td>
+            <td class="td1">分享者介绍：</td>
+            <td><input id="share_intruduction"/></td>
 		</tr>
 		<tr>
 			<td class="td1">手机号码：</td>
@@ -170,11 +171,11 @@
 		<tr>
 			<td class="td1 tdt">案例方向：</td>
 			<td>
-				<label><input type="radio" name="case_direction" checked="checked" value="1"/>产品创新/用户体验（用户体验、产品设计、商业模式……）</label>
-				<label><input type="radio" name="case_direction"  value="2"/>团队管理/组织发展（绩效管理、团队管理、敏捷转型……）</label>
-				<label><input type="radio" name="case_direction" value="3"/>架构设计/技术战略（云计算、大数据、架构设计……）</label>
-				<label><input type="radio" name="case_direction" value="4"/>开发管理/流程优化（开发语言/工具、流程、敏捷开发……）</label>
-				<label><input type="radio" name="case_direction" value="5"/>测试管理/质量平台（质量体系、自动化测试、探索测试……）</label>
+				<label><input type="radio" style="height: 52px;" name="case_direction" checked="checked" value="1"/><img style="vertical-align:top"  src="{$imgPath}fangxiang1.gif"/>产品创新/用户体验（用户体验、产品设计、商业模式……）</label>
+				<label><input type="radio" name="case_direction"  value="2"/><img  src="{$imgPath}fangxiang2.gif"/>团队管理/组织发展（绩效管理、团队管理、敏捷转型……）</label>
+				<label><input type="radio" name="case_direction" value="3"/><img  src="{$imgPath}fangxiang3.gif"/>架构设计/技术战略（云计算、大数据、架构设计……）</label>
+				<label><input type="radio" name="case_direction" value="4"/><img  src="{$imgPath}fangxiang4.gif"/>开发管理/流程优化（开发语言/工具、流程、敏捷开发……）</label>
+				<label><input type="radio" name="case_direction" value="5"/><img  src="{$imgPath}fangxiang5.gif"/>测试管理/质量平台（质量体系、自动化测试、探索测试……）</label>
 			</td>
 		</tr>
 	</table>
