--- a/phpcms/templates/top100/content/header.html
+++ b/phpcms/templates/top100/content/header.html
@@ -12,7 +12,10 @@ $imgPath = CSS_PATH.'top100/img/';$cateUrl = '/index.php?m=content&c=index&a=lis
 <title>TOP100SUMMIT全球软件案例智库 - 评选全球年度Top100研发案例</title>
 <link rel="stylesheet" href="{$css}common.css" />
 <link rel="stylesheet" href="{$css}style.css" />
+    <link rel="stylesheet" href="{$css}chinaz.css" />
 <script language="JavaScript" src="{$js}jquery.js"></script>
+    <script language="JavaScript" src="{$js}jquery-latest.min.js"></script>
+    <script language="JavaScript" src="{$js}chinaz.js"></script>
 </head>
 
 <body>
@@ -26,7 +29,9 @@ $imgPath = CSS_PATH.'top100/img/';$cateUrl = '/index.php?m=content&c=index&a=lis
 		<a href="/index.php?m=member&c=index&a=login" class="js_login">登录</a> | 
 		<a href="/index.php?m=member&c=index&a=register" class="js_reg">注册</a>
 		<?php }else{ ?>
-		<a href="javascript:void(0)" class="t-ca">已报名课程</a>&emsp;<a href="javascript:;">修改密码</a> | <a href="index.php?m=api&c=user&a=logout">退出登录</a>
+        <a href="/index.php?m=api&c=caseSubmit">案例提交</a>&emsp;
+        <a href="/index.php?m=api&c=myCaseList&cs=10513" class="t-ca">我的案例</a>&emsp;
+		<a href="#" class="t-ca">已报名课程</a>&emsp;<a href="javascript:;">修改密码</a> | <a href="index.php?m=api&c=user&a=logout">退出登录</a>
 		<?php } ?>
 	</div>
 </div>
@@ -37,7 +42,7 @@ $imgPath = CSS_PATH.'top100/img/';$cateUrl = '/index.php?m=content&c=index&a=lis
 		<ul class="r h-nav">
 			<li class="l"><a href="/index.php?m=api&c=think&a=listCourses&t=2">智库</a><span class="countCourse"></span></li>
 			<li class="l"><a href="/index.php?m=api&c=summit&a=summit2015">summit2015</a></li>
-            <li class="l"><a href="/index.php?m=api&c=caseSubmit&a=caseSubmit">案例提交</a></li>
+
 			<li class="l"><a href="/index.php?m=api&c=activity">走进案例</a><span class="countSalon"></span></li>
 			<li class="l"><a href="<?= $cateUrl?>25">出版</a></li>
 			<li class="l"><a href="/index.php?m=content&c=index&a=lists&catid=27">合作赞助</a></li>
