--- a/phpcms/templates/top100/content/header.html
+++ b/phpcms/templates/top100/content/header.html
@@ -30,7 +30,7 @@ $imgPath = CSS_PATH.'top100/img/';$cateUrl = '/index.php?m=content&c=index&a=lis
 		<a href="/index.php?m=member&c=index&a=register" class="js_reg">注册</a>
 		<?php }else{ ?>
         <a href="/index.php?m=api&c=caseSubmit">案例提交</a>&emsp;
-        <a href="/index.php?m=api&c=myCaseList&cs=10513" class="t-ca">我的案例</a>&emsp;
+        <a href="/index.php?m=api&c=myCaseList&currPage=1" class="t-ca">我的案例</a>&emsp;
 		<a href="#" class="t-ca">已报名课程</a>&emsp;<a href="javascript:;">修改密码</a> | <a href="index.php?m=api&c=user&a=logout">退出登录</a>
 		<?php } ?>
 	</div>
